--- a/packages/batch-tx-handler/tsconfig.json
+++ b/packages/batch-tx-handler/tsconfig.json
@@ -1,15 +1,14 @@
 {
+  "compilerOptions": {
+    "target": "es2017",
+    "module": "commonjs",
+    "lib": ["DOM"],
+    "esModuleInterop": true
+  },
+  "ts-node": {
+    "esm": true,
     "compilerOptions": {
-      "target": "es2017",
-      "module": "commonjs",
-      "lib": ["DOM"],
-      "esModuleInterop": true
-    },
-    "ts-node": {
-      "esm": true,
-      "compilerOptions": {
-        "module": "nodenext",
-      }
+      "module": "nodenext"
     }
   }
-  
+}
