--- a/packages/batch-tx-handler/package.json
+++ b/packages/batch-tx-handler/package.json
@@ -26,7 +26,6 @@
     "@offchainlabs/eslint-config-typescript": "^0.2.2",
     "@offchainlabs/prettier-config": "^0.2.1",
     "@types/brotli": "^1.3.1",
-    "@types/node-fetch": "^2.6.9",
     "@types/yargs": "^17.0.17",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
@@ -35,6 +34,7 @@
     "dotenv-expand": "^10.0.0",
     "ethereumjs-util": "^7.1.5",
     "ethers": "^5.7.0",
+    "js-base64": "^3.7.5",
     "node-fetch": "2",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
