resolve request changes

--- a/packages/batch-tx-handler/.env-sample
+++ b/packages/batch-tx-handler/.env-sample
@@ -2,3 +2,5 @@
 L2RPC="https://arb1.arbitrum.io/rpc"
 # Ethereum RPC; i.e., for Ethereum mainnet https://mainnet.infura.io/v3/<your infura key>
 L1RPC=""
+# DAC url
+NovaDacUrl="https://nova.arbitrum.io/das-servers"
