--- a/packages/batch-tx-handler/tsconfig.json
+++ b/packages/batch-tx-handler/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "es2017",
     "module": "commonjs",
     "lib": ["DOM"],
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "strict": true
   },
   "ts-node": {
     "esm": true,
